# ConvolutionalNeuralNetwork

./: CMakeLists.txt  main.cpp
Includes/: Config.h  DNN.h  Layer.h  RNG.h
Includes/Layer/: Convolutional.h  FullyConnected.h  Pooling.h
